--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="./main.css" />
+  <link rel="stylesheet" href="/main.css" />
 
   <title>Resume Builder</title>
 </head>
